--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-dark-custom">
+<nav class="navbar navbar-light bg-dark-custom">
     <div class="collapse navbar-collapse w-100 order-1 order-lg-0" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-items">
@@ -13,7 +13,7 @@
                 <a class="nav-link nav-link-custom" href="/app">App</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link nav-link-custom" href="/about">About</a>
+                <a class="nav-link nav-link-custom" href="/timeline">Time Line</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link nav-link-custom" href="/contact">Contact</a>
