--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
   margin: 0;
 }
 /*Navbar*/
-nav.navbar.navbar-expand-lg.navbar-light.bg-dark-custom{
+nav.navbar{
 	border-top: 1px solid black;
 	margin-top: 5px;
 }
@@ -220,7 +220,52 @@ img.post-image, img.page-img {
 .form-div{
   margin-top: 40px;
 }
+.time-line ul li{
+  list-style-type: none;
+  position: relative;
+  margin: 10px 0;
+}
+.time-line ul li::before{
+  content: "";
+  height: 105%;
+  position: absolute;
+  border: 2px solid black;
+  top: 20px;
+}
 
+.time-line ul li::after {
+  content: '';
+  position: absolute;
+  left: 2px;
+  top: 3px;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #000;
+}
+.time-line p{
+  margin-left: 50px;
+  margin-top: 35px;
+  font-weight: bold;
+}
+.time-line img{
+  width: 800px;
+  height: 400px;
+  margin-left: 50px;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+}
+.time-line .start{
+  color: green;
+  font-size: 20px;
+}
+.time-line .start::before{
+  height: 100%;
+  border: none;
+}
 /*Footer*/
 footer{
   display: flex;
@@ -263,5 +308,12 @@ h4{
 
   img{
     width: 100%;
+  }
+  .time-line img{
+    width: 270px;
+    height: 150px;
+  }
+  .time-line ul {
+    padding-left: 20px;
   }
 }
